manifests/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bert-e
  labels:
    app.kubernetes.io/name: bert-e
    app.kubernetes.io/instance: bert-e
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bert-e
      app.kubernetes.io/instance: bert-e
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bert-e
        app.kubernetes.io/instance: bert-e
    spec:
      serviceAccountName: default
      containers:
      - name: bert-e
        image: 'bert-e:latest'
        imagePullPolicy: IfNotPresent
        args:
        - "--settings-file"
        - "/conf/settings.yml"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5            
        readinessProbe:
          httpGet:
            path: /
            port: http
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: cache
          mountPath: /root/.bert-e
        - name: config
          mountPath: /conf
        - name: temp
          mountPath: /tmp      
      volumes:
      - name: cache
        emptyDir:
      - name: config
        secret:
          secretName: bert-e-config
      - name: temp
        emptyDir:
